# Tic-Tac-Toe

./: build_release.sh
contracts/tic-tac-toe/: Cargo.toml
contracts/tic-tac-toe/src/: contract.rs  state.rs
